--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "dev": "ts-node src/index.ts",
     "check": "npm run build && npm start check",
     "lint": "eslint src/**/*.ts",
+    "lint:fix": "eslint src/**/*.ts --fix",
+    "format": "prettier --write src/**/*.ts",
+    "format:check": "prettier --check src/**/*.ts",
     "test": "jest",
     "pkg:build": "npm run build && pkg dist/index.js --targets node18-macos-x64 --out-path ./bin",
     "pkg:macos": "npm run build && pkg dist/index.js --targets node18-macos-x64 --out-path ./bin",
@@ -36,13 +39,18 @@
     "outputPath": "./bin"
   },
   "devDependencies": {
+    "@eslint/js": "^9.32.0",
     "@types/jest": "^29.0.0",
     "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.0.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.3",
+    "globals": "^16.3.0",
     "jest": "^29.0.0",
     "pkg": "^5.8.1",
+    "prettier": "^3.6.2",
     "ts-jest": "^29.0.0",
     "ts-node": "^10.0.0",
     "typescript": "^5.0.0"
