--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
+    "@types/inquirer": "^9.0.8",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.1.0",
     "@types/node-cron": "^3.0.11",
@@ -68,6 +69,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@inquirer/prompts": "^7.8.0",
     "commander": "^14.0.0",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.5"
