--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "scripts": {
     "build": "EAI_BUILD_SECRET=\"${EAI_BUILD_SECRET:-$(openssl rand -hex 32)}\" tsc",
-    "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts",
+    "start": "node dist/cli/index.js",
+    "dev": "ts-node src/cli/index.ts",
     "check": "npm run build && npm start check",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
