--- a/.github/workflows/copilot-setup-steps.yml
+++ b/.github/workflows/copilot-setup-steps.yml
@@ -5,10 +5,13 @@ on:
   push:
     paths:
       - .github/workflows/copilot-setup-steps.yml
+  pull_request:
+    paths:
+      - .github/workflows/copilot-setup-steps.yml
 
 jobs:
   copilot-setup-steps:
-    runs-on: ubuntu-latest-4-cores
+    runs-on: ubuntu-latest
 
     permissions:
       contents: read
