--- a/.github/workflows/copilot-setup-steps.yml
+++ b/.github/workflows/copilot-setup-steps.yml
@@ -1,5 +1,9 @@
 name: "Copilot Setup Steps"
 
+# Automatically run the setup steps when they are changed
+# Allows for streamlined validation,
+# and allow manual testing through the repository's "Actions" tab
+
 on:
   workflow_dispatch:
   push:
@@ -7,12 +11,19 @@ on:
       - .github/workflows/copilot-setup-steps.yml
 
 jobs:
+  # The job MUST be called `copilot-setup-steps`
+  # otherwise it will not be picked up by Copilot.
   copilot-setup-steps:
     runs-on: ubuntu-latest-4-cores
 
+    # Permissions set just for the setup steps
+    # Copilot has permissions to its branch
+
     permissions:
+      # To allow us to clone the repo for setup
       contents: read
 
+    # The setup steps - install Python and our dependencies
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -25,3 +36,21 @@ jobs:
 
       - name: Install JavaScript dependencies
         run: npm ci
+
+      - name: Build CLI
+        run: npm run build
+
+      - name: Install UI dependencies
+        run: cd ui && npm ci
+
+      - name: Build UI
+        run: npm run build:ui
+
+      - name: Run CLI tests
+        run: npm test
+
+      - name: Run UI tests
+        run: cd ui && npm test
+
+      - name: Run lint checks
+        run: npm run lint:all
