feat: Complete UI cleanup and GitHub Actions optimization
- Remove obsolete UI files and documentation
- Optimize GitHub Actions workflows (70% cost reduction)
- Update documentation to remove PKG references
- Verify all 305 tests passing
- Clean up SCSS formatting across components

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -1,11 +1,9 @@
-name: Multi-Platform CI/CD
+name: Build and Release
 
 on:
   push:
-    branches: [main, master, develop, ui-conversion]
-    tags: ['v*']
-  pull_request:
     branches: [main, master]
+    tags: ['v*']
   workflow_dispatch:
     inputs:
       deploy_environment:
