--- a/package.json
+++ b/package.json
@@ -137,16 +137,16 @@
     "mac": {
       "target": "dmg",
       "category": "public.app-category.utilities",
-      "icon": "public/favicon.ico"
+      "icon": "public/icons/security-icon.svg"
     },
     "win": {
       "target": "nsis",
-      "icon": "public/favicon.ico"
+      "icon": "public/icons/security-icon.svg"
     },
     "linux": {
       "target": "AppImage",
       "category": "Utility",
-      "icon": "public/favicon.ico"
+      "icon": "public/icons/security-icon.svg"
     }
   }
 }
