fix: Add Linux sandbox configuration for CI environments
- Added --no-sandbox and --disable-dev-shm-usage flags for Linux CI environments
- Added Linux-specific npm scripts with ELECTRON_DISABLE_SANDBOX=1
- Updated test-linux.sh to use CI-safe electron commands
- Fixes SUID sandbox error in GitHub Actions Linux runners
- Maintains security for production while enabling CI testing

--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
     "check:strict": "npx electron . check --profile strict --format human", 
     "validate": "npx electron . validate",
     "version:show": "npx electron . --version",
+    "check:linux": "ELECTRON_DISABLE_SANDBOX=1 npx electron . check",
+    "check:dev:linux": "ELECTRON_DISABLE_SANDBOX=1 npx electron . check --profile developer --format human",
+    "version:show:linux": "ELECTRON_DISABLE_SANDBOX=1 npx electron . --version",
     "lint": "eslint '**/*.{js,ts,html}' --ignore-pattern 'node_modules/' --ignore-pattern 'dist/' --ignore-pattern '.angular/' --ignore-pattern 'coverage/' --ignore-pattern 'release/'",
     "lint:fix": "eslint '**/*.{js,ts,html}' --ignore-pattern 'node_modules/' --ignore-pattern 'dist/' --ignore-pattern '.angular/' --ignore-pattern 'coverage/' --ignore-pattern 'release/' --fix",
     "format": "prettier --write 'src/**/*.{ts,js,html,scss}' 'ui/src/**/*.{ts,js,html,scss}' || true",
